examples/errors/assign_to_const/main.lc


function main() {
    const a = 3;
    a = 4;
    print(a);
}
